--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 /db/*.sqlite3-journal
 /config/twilio.yml
 /config/database.yml
+/config/secrets.yml
+/config/mongoid.yml
 
 # Ignore all logfiles and tempfiles.
 /log/*
